k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k0bra-system
  labels:
    name: k0bra-system
    app.kubernetes.io/name: k0bra
    app.kubernetes.io/component: system
